New Version of Web File

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>never mind it works</title>
   </head>
   <body>
-    <h1>Hello Angular Students</h1>
+    <h1>Hello Angular Students Revised</h1>
 
   </body>
 </html>
